@@ -180,7 +180,7 @@ $T=array(
 	'choosecol' => 'Invitado, elegí un color:',
 	'randomcol' => 'Color al azar',
 	'enter' => 'Entrar a la sala',
-	'error' => 'Error:',
+	'error' => 'Error',
 	'members' => 'Miembros',
 	'guests' => 'Invitados',
 	'approveguests' => '%d nuevos invitados para aprobar',
