@@ -180,7 +180,7 @@ $T=array(
 	'choosecol' => 'Invité, choisir une couleur:',
 	'randomcol' => 'Couleur aléatoire',
 	'enter' => 'Entrer',
-	'error' => 'Erreur:',
+	'error' => 'Erreur',
 	'members' => 'Membres',
 	'guests' => 'Invités',
 	'approveguests' => '%d nouveaux invités à approuver',
