@@ -180,7 +180,7 @@ $T=array(
 	'choosecol' => 'Silahkan pilih warna:',
 	'randomcol' => 'Warna acak',
 	'enter' => 'Masuk obrolan',
-	'error' => 'Kesalahan:',
+	'error' => 'Kesalahan',
 	'members' => 'Anggota',
 	'guests' => 'Tamu',
 	'approveguests' => '%d tamu baru untuk disetujui',
