@@ -180,7 +180,7 @@ $T=array(
 	'choosecol' => 'Гости выбирают цвет:',
 	'randomcol' => 'Случайный цвет',
 	'enter' => 'Войти в чат',
-	'error' => 'Ошибка:',
+	'error' => 'Ошибка',
 	'members' => 'Зарегистрированные',
 	'guests' => 'Гости',
 	'approveguests' => '%d новые гости для одобрения',
