@@ -8,6 +8,7 @@ Attempt to create database when there is no connection
 Add fallback option for moderator approval
 Fix guestaccess selection in setup
 Add option to let guests register themselves
+Add better fatal error handling
 
 Version 1.15.3 - Mar. 6, 2016
 Allow using html tags in linkfilter without breaking dereferrer or image embed
